Completed distribution packaging